--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
 	},
 	"engines": {
 		"node": "9.5.0"
+	},
+	"devDependencies": {
+		"eslint-config-airbnb-base": "^12.1.0",
+		"eslint-plugin-import": "^2.9.0"
 	}
 }
